# temp

./: CMakeLists.txt
Chess/assets/textures/: 123.py
Chess/src/: app.cpp  game_controller.cpp  game_controller.h  game_interfaces.h
Chess/src/core/: Clock.cpp  Clock.h  Stockfish.cpp  Stockfish.h  board.cpp  board.h  game_mode.cpp  game_mode.h  move.cpp  move.h  pieces.h  pieses.cpp  pieses.h  position.cpp  position.h
Chess/src/graphic/: InputBox.cpp  InputBox.h  ResourceManager.h  button.cpp  button.h  sfml_graphics.h
Chess/src/menu/: MainMenu.cpp  MainMenu.h
Chess/src/network/: NetworkClient.cpp  NetworkClient.h  PacketType.h  ServerMain.cpp  chessServer.cpp  chessServer.h
